--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.14.0",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,6 +18,7 @@
     "@types/react-dom": "18.2.5",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
+    "firebase": "^9.22.2",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
