--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.14.0",
+    "node": "^18.14.0",
     "npm": "please-use-yarn"
   },
   "scripts": {
